--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,4 @@ monitor_speed = 115200
 ; para que no compile lo que no queremos
 build_flags =
    -D DEBUG
-;   -D TEST_PID         
+   -D TEST_PID         
