--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,13 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-; para que no compile lo que no queremos
 build_flags =
-   -D DEBUG
-   -D TEST_PID         
+   ;-D DEBUG             ; "Funcion" para debuggear sin tener que comentar partes de codigo.
+   
+   -D TEST_PID          ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas 
+   
+   ;-D NIGHTFALL        ; Flags para asignar las constantes PID
+   ;-D DIEGO
+   -D ARGENTUM
+
+   -D LINEA=BLANCA      ; Flag para indicar la linea de la pista: DEBE DECIR """LINEA=BLANCA"""
