--- a/platformio.ini
+++ b/platformio.ini
@@ -14,12 +14,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 build_flags =
-   ;-D DEBUG             ; "Funcion" para debuggear sin tener que comentar partes de codigo.
+   ;-D DEBUG               ; "Funcion" para debuggear sin tener que comentar partes de codigo.
+   ;-D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
    
-   -D TEST_PID          ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas 
-   
-   ;-D NIGHTFALL        ; Flags para asignar las constantes PID
-   ;-D DIEGO
-   -D ARGENTUM
-
-   -D LINEA=BLANCA      ; Flag para indicar la linea de la pista: DEBE DECIR """LINEA=BLANCA"""
+   -D CORREDOR=NIGHTFALL   ; Flags para asignar las constantes PID (NIGHTFALL, DIEGO, ARGENTUM)
