--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,7 @@ build_flags =
    ;-D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
    
    -D CORREDOR=NIGHTFALL   ; Flags para asignar las constantes PID (NIGHTFALL, DIEGO, ARGENTUM)
+
+lib_deps =
+    https://github.com/Arduino-IRremote/Arduino-IRremote.git
+    https://github.com/pololu/qtr-sensors-arduino.git
