--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,9 @@ monitor_speed = 115200
 build_flags =
    ;-D DEBUG               ; "Funcion" para debuggear sin tener que comentar partes de codigo.
    ;-D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
-   
    -D CORREDOR=NIGHTFALL   ; Flags para asignar las constantes PID (NIGHTFALL, DIEGO, ARGENTUM)
+
+   ;-D LINEA_NEGRA        ; COMENTAR PARA LINEA BLANCA
 
 lib_deps =
     https://github.com/Arduino-IRremote/Arduino-IRremote.git
