--- a/platformio.ini
+++ b/platformio.ini
@@ -1,25 +1,35 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-[env:esp32dev]
+[env]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-build_flags =
-   ;-D DEBUG               ; "Funcion" para debuggear sin tener que comentar partes de codigo.
-   ;-D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
-   -D CORREDOR=NIGHTFALL   ; Flags para asignar las constantes PID (NIGHTFALL, DIEGO, ARGENTUM)
-
-   ;-D LINEA_NEGRA        ; COMENTAR PARA LINEA BLANCA
 
 lib_deps =
     https://github.com/Arduino-IRremote/Arduino-IRremote.git
     https://github.com/pololu/qtr-sensors-arduino.git
+    
+build_flags =
+   ;-D DEBUG               ; "Funcion" para debuggear sin tener que comentar partes de codigo.
+   ;-D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
+   ;-D MUTEAR
+   ;-D LINEA_NEGRA        ; COMENTAR PARA LINEA BLANCA
+    -D USAR_CONTROL_IR
+
+   ; Flags para asignar las constantes PID (NIGHTFALL, DIEGO, ARGENTUM)
+   ;-D CORREDOR=DIEGO
+   -D CORREDOR=NIGHTFALL
+   ;-D CORREDOR=ARGENTUM
+
+
+; ================== ENTORNOS ===============
+[env:main]              ; Entorno principal
+
+[env:prueba_botones]    ; Prueba interrupciones
+build_src_filter = +<../test/prueba_interrupciones.cpp>
+
+[env:prueba_lectura]    ; Prueba de lectura
+build_src_filter = +<../test/prueba_lectura.cpp>
+
+[env:prueba_control]    ; Prueba del control IR
+build_src_filter = +<../test/prueba_contro_IR.cpp>
+
