--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,12 @@ build_flags =
    ;-D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
    ;-D MUTEAR
    ;-D LINEA_NEGRA        ; COMENTAR PARA LINEA BLANCA
-    -D USAR_CONTROL_IR
+   ;-D USAR_CONTROL_IR
 
    ; Flags para asignar las constantes PID (NIGHTFALL, DIEGO, ARGENTUM)
    ;-D CORREDOR=DIEGO
-   -D CORREDOR=NIGHTFALL
-   ;-D CORREDOR=ARGENTUM
+   ;-D CORREDOR=NIGHTFALL
+   -D CORREDOR=ARGENTUM
 
 
 ; ================== ENTORNOS ===============
@@ -32,4 +32,7 @@ build_src_filter = +<../test/prueba_lectura.cpp>
 
 [env:prueba_control]    ; Prueba del control IR
 build_src_filter = +<../test/prueba_contro_IR.cpp>
+
+[env:prueba_sin_modular]    ; Prueba sin modular    [REVISAR - depende de drv8833]
+build_src_filter = +<../test/prueba_sin_modular.cpp>
 
