--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@ lib_deps =
     
 build_flags =
    -D DEBUG               ; "Funcion" para debuggear sin tener que comentar partes de codigo.
-   ;-D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
-   -D MUTEAR
+   -D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
+   ;-D MUTEAR
    ;-D LINEA_NEGRA        ; COMENTAR PARA LINEA BLANCA
    ;-D USAR_CONTROL_IR
 
