fsm e timer ISR funcinando correctamente

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,11 @@ lib_deps =
     https://github.com/pololu/qtr-sensors-arduino.git
     
 build_flags =
-   -D DEBUG               ; "Funcion" para debuggear sin tener que comentar partes de codigo.
-   -D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
-   ;-D MUTEAR
+   ;-D DEBUG               ; "Funcion" para debuggear sin tener que comentar partes de codigo.
+   ;-D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
+   -D MUTEAR                ; COMENTAR PARA PRENDER LA BOCINA
    ;-D LINEA_NEGRA        ; COMENTAR PARA LINEA BLANCA
-   ;-D USAR_CONTROL_IR
+   ;-D USAR_CONTROL_IR      ; COMENTAR PARA NO USAR LA BOCINA
 
    ; Flags para asignar las constantes PID (NIGHTFALL, DIEGO, ARGENTUM)
    ;-D CORREDOR=DIEGO
