Se agregaron bloques de documentacion Doxygen al archivo platformio.ini y a todos los archivos de prueba (prueba_interrupciones.cpp, Prueba_contro_IR.cpp, prueba_lectura.cpp, prueba_sin_modular.cpp, y prueba_motores.ino), detallando la función, los pines y la lógica de cada test para mejorar la trazabilidad del código.
Signed-off-by: Nicolas T <ntejada@fie.undef.edu.ar>

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,38 +1,51 @@
+/*
+@file platformio.ini
+@brief Archivo de configuración principal para PlatformIO. Define la plataforma de hardware (ESP32), el framework (Arduino), las librerías externas y los flags de pre-procesador para habilitar o deshabilitar funcionalidades (debug, perfiles PID, etc.).
+*/
+
 [env]
-platform = espressif32
-board = esp32dev
-framework = arduino
-monitor_speed = 115200
+platform = espressif32        ; Plataforma de hardware: Espressif ESP32
+board = esp32dev              ; Placa de desarrollo específica (ESP32 Dev Module)
+framework = arduino           ; Framework de desarrollo: Arduino (para usar las funciones estándar)
+monitor_speed = 115200        ; Velocidad del puerto serial para monitorear la salida de debug
 
 lib_deps =
+    ; Librería para el control del sensor infrarrojo (Control remoto IR)
     https://github.com/Arduino-IRremote/Arduino-IRremote.git
+    ; Librería para el sensor de línea QTR (Pololu)
     https://github.com/pololu/qtr-sensors-arduino.git
     
 build_flags =
-   ;-D DEBUG               ; "Funcion" para debuggear sin tener que comentar partes de codigo.
-   ;-D TEST_PID            ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
-   ;-D MUTEAR
-   ;-D LINEA_NEGRA        ; COMENTAR PARA LINEA BLANCA
-   ;-D USAR_CONTROL_IR
+    ;-D DEBUG               ; Habilita la salida serial de debug (macro 'deb()').
+    ;-D TEST_PID            ; Habilita el modo de prueba para encontrar o ajustar constantes PID.
+    ;-D MUTEAR              ; Silencia la salida del Buzzer (macro 'mute()').
+    ;-D LINEA_NEGRA         ; Descomentar si el robot sigue una línea negra sobre un fondo blanco.
+    ;-D USAR_CONTROL_IR     ; Habilita la lógica para recibir comandos desde un control remoto IR.
 
-   ; Flags para asignar las constantes PID (NIGHTFALL, DIEGO, ARGENTUM)
-   ;-D CORREDOR=DIEGO
-   ;-D CORREDOR=NIGHTFALL
-   -D CORREDOR=ARGENTUM
+    ; Flags para asignar las constantes PID (NIGHTFALL, DIEGO, ARGENTUM)
+    ;-D CORREDOR=DIEGO      ; Perfil de constantes PID para el corredor DIEGO.
+    ;-D CORREDOR=NIGHTFALL  ; Perfil de constantes PID para el corredor NIGHTFALL.
+    -D CORREDOR=ARGENTUM    ; Perfil de constantes PID actualmente activo (ARGENTUM).
 
 
-; ================== ENTORNOS ====================
-[env:main]              ; Entorno principal
+; ================== ENTORNOS DE PRUEBA ====================
+/*
+@brief Secciones para la compilación de pruebas o archivos fuente alternativos.
 
-[env:prueba_botones]    ; Prueba interrupciones
+PlatformIO permite definir múltiples entornos de compilación, donde cada uno 
+puede usar un archivo 'main' diferente del directorio 'test'.
+*/
+
+[env:main]              ; Entorno principal (usa src/main.cpp)
+
+[env:prueba_botones]    ; Prueba de interrupciones de botones
 build_src_filter = +<../test/prueba_interrupciones.cpp>
 
-[env:prueba_lectura]    ; Prueba de lectura
+[env:prueba_lectura]    ; Prueba de lectura de los sensores de línea
 build_src_filter = +<../test/prueba_lectura.cpp>
 
-[env:prueba_control]    ; Prueba del control IR
+[env:prueba_control]    ; Prueba del control remoto IR
 build_src_filter = +<../test/prueba_contro_IR.cpp>
 
-[env:prueba_sin_modular]    ; Prueba sin modular    [REVISAR - depende de drv8833]
+[env:prueba_sin_modular]    ; Prueba del código antiguo o sin modular (REVISAR - depende de drv8833)
 build_src_filter = +<../test/prueba_sin_modular.cpp>
-
