--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@ lib_deps =
     https://github.com/pololu/qtr-sensors-arduino.git
     
 build_flags =
-   -D DEBUG                 ; "Funcion" para debuggear sin tener que comentar partes de codigo.
+   ;-D DEBUG                 ; "Funcion" para debuggear sin tener que comentar partes de codigo.
    ;-D TEST_PID             ; "Funcion" para encontrar NZ (Constantes K) o usar la Ku y Tu obtenidas   
    ;-D MUTEAR                ; COMENTAR PARA PRENDER LA BOCINA
    ;-D LINEA_NEGRA          ; COMENTAR PARA LINEA BLANCA
